[package]
name = "embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rppal = "0.12"
dht22_pi = "1.0.0"
clap = { version = "3.2.17", features = ["derive"] }
chrono = "0.4.22"
signal-hook = "0.3.14"
termcolor = "1.1.3"
atty = "0.2.14"
rppal = "0.13.1"
