[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.2"
dht22_pi = "1.0.0"
# dht11_pi = "0.4.0"
rppal-dht11 = "0.3.1"
clap = { version = "3.2.17", features = ["derive"] }
chrono = "0.4.22"
signal-hook = "0.3.14"
termcolor = "1.1.3"
atty = "0.2.14"
rppal = "0.13.1"

[build-dependencies]
clap = { version = "3.2.17", features = ["derive"] }
clap_mangen = "0.1.10"
clap_complete = "3.2.3"

[profile.release]
lto = true   # link-time-optimization
strip = true # strip symbols from binary
